# TeaLang-Compiler

./: CMakeLists.txt  README.md  TeaLang.txt  runner.cpp
AST/: ASTAssignmentStatementNode.cpp  ASTAssignmentStatementNode.h
Interpreter/: interpreter.cpp  interpreter.h
Lexer/: Token.cpp  Token.h  lexer.cpp  lexer.h  token.cpp  token.h
Parser/: ast.cpp  ast.h  parser.cpp  parser.h
Scripts/: Power.txt
Semantics/: semantic.cpp  semantic.h
Tea2Lang/Interpreter/: interpreter.cpp  interpreter.h
Tea2Lang/Lexer/: lexer.cpp  lexer.h  token.cpp  token.h
Tea2Lang/Parser/: ast.cpp  ast.h  parser.cpp
Tea2Lang/Semantics/: semantic.cpp  semantic.h
Tea2Lang/Visitor/: visitor.h  xml.cpp  xml.h
Tealang/Interpreter/: interpreter.cpp  interpreter.h
Tealang/Lexer/: lexer.cpp  token.cpp  token.h
Tealang/Scripts/: TeaLang.txt
Tealang/Semantics/: semantic.h
Visitor/: Visitor.h  visitor.h  xml.h
Visitor/Visitor/: xml.cpp
